force-app/main/default/objects/Case/fields/Child_Cases__c.field-meta.xml
<CustomField>
    <fullName>Child_Cases__c</fullName>
    <label>Child Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>