force-app/main/default/objects/Case/fields/Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Link__c</fullName>
    <formula>HYPERLINK(&#39;https://lightdd-dev-ed.lightning.force.com/Id&#39;,&#39;Feedback Test Link&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback Link</label>
    <type>Text</type>
</CustomField>