force-app/main/default/objects/Case/fields/Has_Child__c.field-meta.xml
<CustomField>
    <fullName>Has_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Child</label>
    <type>Checkbox</type>
</CustomField>