force-app/main/default/objects/Case/validationRules/Has_child.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_child</fullName>
    <active>true</active>
    <errorConditionFormula>Has_Child__c</errorConditionFormula>
    <errorMessage>It has child</errorMessage>
</ValidationRule>