force-app/main/default/objects/Case/listViews/Test_Case.listView-meta.xml
<ListView>
    <fullName>Test_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Escalated Queue</label>
    <queue>Test</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>